[gd_scene load_steps=10 format=3 uid="uid://diko8nqh4bx31"]

[ext_resource type="Script" path="res://Scripts/UI/HUD/interaction.gd" id="1_wpsxv"]
[ext_resource type="Texture2D" uid="uid://dkdp6ikt1cbr8" path="res://Assets/Textures/UI/HUD/Interaction/empty_key_button.png" id="2_15nkl"]
[ext_resource type="Texture2D" uid="uid://dh0882lvs341s" path="res://Assets/Textures/UI/HUD/Interaction/empty_key_button_progress.png" id="3_5fakw"]
[ext_resource type="Texture2D" uid="uid://d1uvpwcmoqee4" path="res://Assets/Textures/UI/HUD/Interaction/empty_interact_message.png" id="4_us7kp"]

[sub_resource type="LabelSettings" id="LabelSettings_2l84h"]
font_size = 24

[sub_resource type="LabelSettings" id="LabelSettings_iuf6u"]

[sub_resource type="Animation" id="Animation_6e7vd"]
resource_name = "fade"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, -2.5),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_2wxbp"]
resource_name = "fade_in"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(-2.5, -2.5),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bmgdb"]
_data = {
"fade": SubResource("Animation_6e7vd"),
"fade_in": SubResource("Animation_2wxbp")
}

[node name="Interaction" type="HBoxContainer"]
modulate = Color(1, 1, 1, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -61.0
offset_top = -32.0
offset_right = 61.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.75, 0.75)
alignment = 2
script = ExtResource("1_wpsxv")

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="PanelContainer" type="PanelContainer" parent="."]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="ProgressBar" type="TextureProgressBar" parent="PanelContainer"]
layout_mode = 2
size_flags_vertical = 0
max_value = 1.0
step = 0.01
value = 1.0
fill_mode = 4
texture_under = ExtResource("2_15nkl")
texture_progress = ExtResource("3_5fakw")

[node name="KeyText" type="Label" parent="PanelContainer"]
layout_mode = 2
label_settings = SubResource("LabelSettings_2l84h")
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
z_index = -1
layout_mode = 2
theme_override_constants/margin_left = -55
theme_override_constants/margin_top = 10
theme_override_constants/margin_bottom = 10

[node name="NinePatchRect" type="NinePatchRect" parent="MarginContainer"]
layout_mode = 2
texture = ExtResource("4_us7kp")
patch_margin_left = 12
patch_margin_top = 12
patch_margin_right = 12
patch_margin_bottom = 12
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/CenterContainer"]
layout_mode = 2
text = "             Open   "
label_settings = SubResource("LabelSettings_iuf6u")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_bmgdb")
}

[node name="PointLight2D" type="PointLight2D" parent="."]
light_mask = 2
position = Vector2(32, 32)
blend_mode = 1
texture = ExtResource("2_15nkl")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
